# Embedded_Linux_Diploma_Projects

./: README.md
Linux_Adminstration_Project/: README.md
Linux_Adminstration_Project/Solution/part1/: README.md  part1_q1_mno.txt  part1_q2_ghijkl.txt  undo  user_init  userdef
Linux_Adminstration_Project/Solution/part2/: README.md
Linux_Adminstration_Project/Solution/part2/CMake_Version/Application/: CMakeLists.txt  Makefile_template  output
Linux_Adminstration_Project/Solution/part2/CMake_Version/Modules/caesar_cipher/: CMakeLists.txt
Linux_Adminstration_Project/Solution/part2/CMake_Version/Modules/xor_cipher/: CMakeLists.txt
Linux_Adminstration_Project/Solution/part2/Makefile_Version/Application/: Makefile  app.c  output
Linux_Adminstration_Project/Solution/part2/Makefile_Version/Modules/caesar_cipher/: caesar_cipher.mk
Linux_Adminstration_Project/Solution/part2/Makefile_Version/Modules/caesar_cipher/inc/: caesar_cipher.h
Linux_Adminstration_Project/Solution/part2/Makefile_Version/Modules/caesar_cipher/src/: caesar_decrypt.c  caesar_encrypt.c
Linux_Adminstration_Project/Solution/part2/Makefile_Version/Modules/xor_cipher/: xor_cipher.mk
Linux_Adminstration_Project/Solution/part2/Makefile_Version/Modules/xor_cipher/inc/: xor_cipher.h
Linux_Adminstration_Project/Solution/part2/Makefile_Version/Modules/xor_cipher/src/: xor_decrypt.c  xor_encrypt.c
Linux_Adminstration_Project/Solution/part3/: README.md  a.out  app.c
